Trying to fix the new profile images not showing on the deployed website

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,8 +2,8 @@ $primary-color: rgb(40, 66, 82);
 $secondary-color: rgb(145, 139, 189);
 $tertiary_color: rgb(255, 185, 255);
 $show-home-image: true;
-$home-image: url(../img/site_background_image.JPG);
-$prof-image: url(../img/pic_2.JPG);
+$home-image: url(/dist/img/site_background_image.JPG);
+$prof-image: url(/dist/img/pic_2.jpg);
 $background-opacity: 0.7;
 
 @mixin easeOut {
